# lazylearn

./: .gitignore  LICENSE  README.md  popup.html  popup.js
.cursor/rules/: python.mdc
apple_script/: screenshot_to_chatgpt.applescript
extension/: content.js  manifest.json  styles.css
snippingtool/: image_to_llm.py  image_utils.py  keyboard_listener.py  main.py  menu_app.py  pyproject.toml  query.py  screenshot.py  screenshot_tool.py
