[project]
name = "snippingtool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.78.1",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyobjc-framework-quartz>=11.0",
    "pyperclip>=1.9.0",
    "pyperclipimg>=0.2.0",
    "python-dotenv>=1.1.0",
]
